--- a/favorite-things.html
+++ b/favorite-things.html
@@ -5,10 +5,10 @@
     <title>Samantha's favorite things</title>
   </head>
   <body>
-    <h1>My favorite things</h1>
+    <h1>My Favorite Things</h1>
     <h2>These are a few of my favorite things.</h2>
 
-    <h3>People & Pets</h3>
+    <h3>~ People & Pets ~</h3>
     <p>Here are some of my favorite people!</p>
     <ul>
       <li>Chandpreet</li>
@@ -28,11 +28,11 @@
       <li>Penny</li>
       <li>Wayne</li>
     </ul>
-    <h3>Ice cream flavors</h3>
+    <h3>~ Ice cream flavors ~</h3>
     <p>These are my three favorites, in order:</p>
     <ol>
       <li>Cherry Garcia</li>
-      <li>Strawberry cheesecake</li>
+      <li>Strawberry Cheesecake</li>
       <li>Cookie Dough</li>
     </ol>
     <p>Thanks for reading about me!</p>
