--- a/favorite-places.html
+++ b/favorite-places.html
@@ -8,7 +8,7 @@
   <body>
     <h1>My Favorite Places</h1>
     <img src="img/greece.jpg">
-    <h2>Here are a few of my <em>favorite places!</em></h2>
+    <p>Here are a few of my <em>favorite places!</em></p>
     <ul>
       <li>Australia</li>
       <li>France</li>
