--- a/favorite-places.html
+++ b/favorite-places.html
@@ -8,7 +8,7 @@
   <body>
     <h1>My Favorite Places</h1>
     <img src="img/greece.jpg">
-    <p>Here are a few of my <em>favorite places!</em></p>
+    <h3>Here are a few of my <em>favorite places:</em></h3>
     <ul>
       <li>Australia</li>
       <li>France</li>
@@ -16,6 +16,5 @@
       <li>Iceland</li>
       <li>Italy</li>
     </ul>
-    <p>Thanks for checking out my favorite places!</p>
   </body>
 </html>
