linked styles2.css to favorite-things webpage and added pictures of pets

--- a/favorite-things.html
+++ b/favorite-things.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <link href="css/styles2.css" rel="stylesheet" type="text/css">
     <title>Samantha's favorite things</title>
   </head>
   <body>
@@ -25,8 +25,11 @@
     <p>Here are my favorite (and only) fur babies!</p>
     <ul>
       <li>Baxter</li>
+      <img src="img/baxter.jpg">
       <li>Penny</li>
+      <img src="img/penny.jpg">
       <li>Wayne</li>
+      <img src="img/wayne.jpg">
     </ul>
     <h3>~ Ice cream flavors ~</h3>
     <p>These are my three favorites, in order:</p>
@@ -35,6 +38,5 @@
       <li>Strawberry Cheesecake</li>
       <li>Cookie Dough</li>
     </ol>
-    <p>Thanks for reading about me!</p>
   </body>
 </html>
