changed background and font colors in styles2.css. Also changed images in index.html

--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
     <p>Here are my favorite (and only) fur babies!</p>
     <ul>
       <li>Baxter</li>
-      <img src="img/baxter.jpg">
+      <img src="img/baxter1.jpg">
       <li>Penny</li>
-      <img src="img/penny.jpg">
+      <img src="img/penny1.jpg">
       <li>Wayne</li>
-      <img src="img/wayne.jpg">
+      <img src="img/wayne1.jpg">
     </ul>
     <h3>~ Ice cream flavors ~</h3>
     <p>These are my three favorites, in order:</p>
